# SCP-079

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  thanks.txt
.github/ISSUE_TEMPLATE/: bugs.md
config/: cfg.py
