[tool.poetry]
name = "SCP-079"
version = "0.1.0"
description = "SCP-079 Discord Bot"
authors = ["Apraxed <discord.zbotdyno.all@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
disnake = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
